# gate-seals-v2

./: AGENTS.md  ANALYSIS_SUMMARY.md  COMMIT_SUMMARY.md  CONSERVATIVE_CHANGES.md  LOGIC_CHANGES.md  MINIMAL_CHANGES.md  MISSING_TESTS.md  PARAMETER_RENAMING.md  README.md  SECURITY_ANALYSIS.md  TEST_RESULTS_SUMMARY.md  WORK_SUMMARY.md  ape-config.yaml  hardhat.config.js  package-lock.json  package.json  pyproject.toml
contracts/: GateSeal.vy  GateSealFactory.vy  GateSealFactoryV2.vy  GateSealV2.vy
contracts/test_helpers/: AdvancedSealableMock.vy  SealableMock.vy
scripts/: check_factory.py  check_gate_seal.py  deploy_factory.py  deploy_gate_seal.py
tests/: conftest.py  test_factory.py  test_factory_edge_cases.py  test_gate_seal.py  test_happy_path.py  test_overflow_edge_cases.py  test_security.py
utils/: blueprint.py  constants.py
